loading first game character

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,11 @@
     "baseUrl": "."
   },
   "include": [
-    "src/**/*.ts"
+    "./index.d.ts",
+    "**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "./dist/"
   ]
 }
